--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
+@font-face {
+  font-family: "BeaufortForLol";
+  src: url("./assets//fonts//BeaufortForLoL-OTF/BeaufortforLOL-Heavy.otf");
+}
+
+@font-face {
+  font-family: "Spiegel";
+  src: url("./assets//fonts//Spiegel-OTF//Spiegel-Regular.otf");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Spiegel, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
